force-app/main/default/objects/Partner_Deal_Registration__c/Partner_Deal_Registration__c.object-meta.xml
<CustomObject>
    <label>Partner Deal Registration</label>
    <nameField>
        <label>Partner Deal Registration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Deal Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>