force-app/main/default/objects/Partner_Deal_Registration__c/fields/Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Deal Registrations</relationshipLabel>
    <relationshipName>Partner_Deal_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>